fix: Fixed integration issues on mobile dialog
- Fixed squished settings dialog form on mobile devices
- Ensure the dialog submit button's width remains consistent across devices

--- a/src/styles/components/_settings-dialog.scss
+++ b/src/styles/components/_settings-dialog.scss
@@ -44,6 +44,8 @@ dialog {
 	form {
 		display: flex;
 		flex-direction: column;
+		gap: 16px;
+		padding-top: 16px;
 
 		fieldset {
 			border-color: transparent;
@@ -172,6 +174,7 @@ dialog {
 		top: 100%;
 		left: 0;
 		right: 0;
+		width: fit-content;
 		margin: auto;
 		transform: translateY(-50%);
 	}	
